# archiver_c

./: .gitignore  CMakeLists.txt  Makefile  README.md  plot_archived_data.py
.github/workflows/: c-cpp.yml  codeql.yml
src/: lib.c  lib.h  main.c  sdm_lib.c  sdm_lib.h
